--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.60.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-ionicons": "^4.5.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0"
   },
